--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="/css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
 </head>
 <body>
   <!-- Heading -->
@@ -92,38 +92,29 @@
     </div>
     <div class="item n2 first">
       <div class="first-n2">
-        <!-- <img src="/img/news1-img.jpg" alt=""> -->
+        <img src="/img/ronaldo.webp" alt="">
       </div>
-      <div class="second-n2">
-        <h2 class="news-heading">Heading</h2>
-        <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
+     
+    </div>
+    <div class="item n2 first">
+      <div class="first-n2">
+        <img src="/img/ronaldo.webp" alt="">
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
+        <div class="title-youtube">
+          <h3>MyClub vs Manchester United</h3>
+        </div>
       </div>
     </div>
     <div class="item n2 first">
       <div class="first-n2">
-        <!-- <img src="/img/news1-img.jpg" alt=""> -->
-      </div>
-      <div class="second-n2">
-        <h2 class="news-heading">Heading</h2>
-        <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
+        <img src="/img/ronaldo.webp" alt="">
       </div>
     </div>
-    <div class="item n2 first">
+    <div class="item n2 second">
       <div class="first-n2">
-        <!-- <img src="/img/news1-img.jpg" alt=""> -->
-      </div>
-      <div class="second-n2">
-        <h2 class="news-heading">Heading</h2>
-        <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
-      </div>
-    </div>
-    <div class="item n2">
-      <div class="first-n2">
-        <!-- <img src="/img/news1-img.jpg" alt=""> -->
-      </div>
-      <div class="second-n2">
-        <h2 class="news-heading">Heading</h2>
-        <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
+        <img src="/img/ronaldo.webp" alt="">
       </div>
     </div>
   </div>
