--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="bai_cuoi_khoa/css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- <script src="index.js"></script> -->
 </head>
 <body>
   <!-- Heading -->
   <div class="header">
-    <img src="/img/logo_myclub.png" alt="">
+    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -24,10 +24,10 @@
     <div class="container">
       <div class="nav">
         <li>
-          <a href="/html/index.html">Home</a>
+          <a href="/bai_cuoi_khoa/html/index.html">Home</a>
         </li>
         <li>
-          <a href="/html/test.html">About</a>
+          <a href="/bai_cuoi_khoa/html/test.html">About</a>
         </li>
         <li>
           <a href="">MyClub</a>
@@ -45,17 +45,17 @@
     <div class="img-content"></div>
     <div class="big-match">
       <div class="home-person">
-        <img src="/img/nedved.png" alt="">
+        <img src="/bai_cuoi_khoa/img/nedved.png" alt="">
       </div>
       <div class="visit-person">
-        <img src="/img/rashford.png" alt="">
+        <img src="/bai_cuoi_khoa/img/rashford.png" alt="">
       </div>
       <div class="logo-matchday home">
-        <img src="/img/logo_myclub.png" alt="">
+        <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
         <h3 class="name-club">MyClub</h3>
       </div>
       <div class="logo-matchday visit">
-        <img src="/img/mu.png" alt="">
+        <img src="/bai_cuoi_khoa/img/mu.png" alt="">
         <h3 class="name-club">Manchester United</h3>
       </div>
       <div class="text-content">
@@ -74,7 +74,7 @@
     </div>
     <div class="first item n1">
       <div class="first-n1">
-        <img src="/img/news1-img.jpg" alt="">
+        <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt="">
       </div>
       <div class="second-n1">
         <h2 class="news-heading">Heading</h2>
@@ -83,7 +83,7 @@
     </div>
     <div class="item n1">
       <div class="first-n1">
-        <img src="/img/news1-img.jpg" alt="">
+        <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt="">
       </div>
       <div class="second-n1">
         <h2 class="news-heading">Heading</h2>
@@ -92,13 +92,13 @@
     </div>
     <div class="item n2 first">
       <div class="first-n2">
-        <img src="/img/ronaldo.webp" alt="">
+        <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
       </div>
      
     </div>
     <div class="item n2 first">
       <div class="first-n2">
-        <img src="/img/ronaldo.webp" alt="">
+        <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
         <div class="title-info">
           <p>8d |&nbsp &nbsp video</p>
         </div>
@@ -109,12 +109,12 @@
     </div>
     <div class="item n2 first">
       <div class="first-n2">
-        <img src="/img/ronaldo.webp" alt="">
+        <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
       </div>
     </div>
     <div class="item n2 second">
       <div class="first-n2">
-        <img src="/img/ronaldo.webp" alt="">
+        <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
       </div>
     </div>
   </div>
