--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Heading -->
   <div class="header">
-    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
+    <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -51,7 +51,7 @@
         <img src="/bai_cuoi_khoa/img/rashford.png" alt="">
       </div>
       <div class="logo-matchday home">
-        <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
+        <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
         <h3 class="name-club">MyClub</h3>
       </div>
       <div class="logo-matchday visit">
@@ -93,6 +93,16 @@
     <div class="item n2 first">
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
+        <div class="title-youtube">
+          <h3>MyClub vs Manchester United</h3>
+        </div>
+        <div class="icon-youtube">
+          <div class="play-button"></div>
+        </div>
+        <div class="color-slider"></div>
       </div>
      
     </div>
@@ -105,16 +115,40 @@
         <div class="title-youtube">
           <h3>MyClub vs Manchester United</h3>
         </div>
+        <div class="icon-youtube">
+          <div class="play-button"></div>
+        </div>
+        <div class="color-slider"></div>
       </div>
     </div>
     <div class="item n2 first">
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
+        <div class="title-youtube">
+          <h3>MyClub vs Manchester United</h3>
+        </div>
+        <div class="icon-youtube">
+          <div class="play-button"></div>
+        </div>
+        <div class="color-slider"></div>
       </div>
     </div>
     <div class="item n2 second">
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
+        <div class="title-youtube">
+          <h3>MyClub vs Manchester United</h3>
+        </div>
+        <div class="icon-youtube">
+          <div class="play-button"></div>
+        </div>
+        <div class="color-slider"></div>
       </div>
     </div>
   </div>
