--- a/bai_cuoi_khoa/html/test.html
+++ b/bai_cuoi_khoa/html/test.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/bai_cuoi_khoa/css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="index.js"></script>
 </head>
 <body>
   <!-- Heading -->
   <div class="header">
-    <img src="/img/logo_myclub.png" alt="">
+    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -24,10 +24,10 @@
     <div class="container">
       <div class="nav">
         <li>
-          <a href="/html/index.html">Home</a>
+          <a href="/bai_cuoi_khoa/html/index.html">Home</a>
         </li>
         <li>
-          <a href="/html/test.html">About</a>
+          <a href="/bai_cuoi_khoa/html/test.html">About</a>
         </li>
         <li>
           <a href="">MyClub</a>
