--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -30,7 +30,7 @@
           <a href="/bai_cuoi_khoa/html/test.html">About</a>
         </li>
         <li>
-          <a href="">MyClub</a>
+          <a href="">dsa</a>
         </li>
         <li>
           <a href="">Schedule</a>
@@ -74,20 +74,30 @@
     </div>
     <div class="first item n1">
       <div class="first-n1">
-        <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt="">
+        <div class="img-news">
+          <!-- <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt=""> -->
+        </div>
       </div>
       <div class="second-n1">
         <h2 class="news-heading">Heading</h2>
         <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
       </div>
     </div>
     <div class="item n1">
       <div class="first-n1">
-        <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt="">
+        <div class="img-news">
+          <!-- <img src="/bai_cuoi_khoa/img/news1-img.jpg" alt=""> -->
+        </div>
       </div>
       <div class="second-n1">
         <h2 class="news-heading">Heading</h2>
         <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
+        <div class="title-info">
+          <p>8d |&nbsp &nbsp video</p>
+        </div>
       </div>
     </div>
     <div class="item n2 first">
