--- a/bai_cuoi_khoa/html/test.html
+++ b/bai_cuoi_khoa/html/test.html
@@ -59,3 +59,19 @@
       <p>Supporting and trusting young people is embedded into the history and the culture of Manchester United and we are renowned worldwide as a leading youth development organisation.</p>
     </div>
   </div>
+  <div class="content-picture">
+    <div class="content-gallery">
+      <div class="item-gallery">
+      </div>
+      <div class="item-gallery">
+      </div>
+      <div class="item-gallery">
+      </div>
+      <div class="item-gallery">
+      </div>
+      <div class="item-gallery">
+      </div>
+      <div class="item-gallery">
+      </div>
+    </div>
+  </div>
