--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Heading -->
   <div class="header">
-    <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
+    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -51,7 +51,7 @@
         <img src="/bai_cuoi_khoa/img/rashford.png" alt="">
       </div>
       <div class="logo-matchday home">
-        <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
+        <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
         <h3 class="name-club">MyClub</h3>
       </div>
       <div class="logo-matchday visit">
@@ -82,7 +82,7 @@
         <h2 class="news-heading">Heading</h2>
         <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d &nbsp &nbsp |&nbsp &nbsp video</p>
         </div>
       </div>
     </div>
@@ -96,7 +96,8 @@
         <h2 class="news-heading">Heading</h2>
         <p class="news-p">TV info, the kick-off time and more key details are packed into our handy preview of Saturday's game on the south coast.</p>
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d &nbsp &nbsp |&nbsp &nbsp video</p>
+          <span class="icon-share"></span>
         </div>
       </div>
     </div>
@@ -104,7 +105,7 @@
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d &nbsp &nbsp |&nbsp &nbsp video</p>
         </div>
         <div class="title-youtube">
           <h3>MyClub vs Manchester United</h3>
@@ -120,7 +121,7 @@
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d  &nbsp &nbsp | &nbsp &nbsp video</p>
         </div>
         <div class="title-youtube">
           <h3>MyClub vs Manchester United</h3>
@@ -135,7 +136,7 @@
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d &nbsp &nbsp |&nbsp &nbsp video</p>
         </div>
         <div class="title-youtube">
           <h3>MyClub vs Manchester United</h3>
@@ -150,7 +151,7 @@
       <div class="first-n2">
         <img src="/bai_cuoi_khoa/img/ronaldo.webp" alt="">
         <div class="title-info">
-          <p>8d |&nbsp &nbsp video</p>
+          <p>8d &nbsp &nbsp |&nbsp &nbsp video</p>
         </div>
         <div class="title-youtube">
           <h3>MyClub vs Manchester United</h3>
