--- a/bai_cuoi_khoa/html/test.html
+++ b/bai_cuoi_khoa/html/test.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Heading -->
   <div class="header">
-    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
+    <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -30,7 +30,7 @@
           <a href="/bai_cuoi_khoa/html/test.html">About</a>
         </li>
         <li>
-          <a href="">MyClub</a>
+          <a href="/bai_cuoi_khoa/html/team.html">dsa</a>
         </li>
         <li>
           <a href="">Schedule</a>
@@ -62,16 +62,40 @@
   <div class="content-picture">
     <div class="content-gallery">
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
       <div class="item-gallery">
+        <div class="gallery-name">
+          <h2>History</h2>
+        </div>
+        <div class="color-slider"></div>
       </div>
     </div>
   </div>
