--- a/bai_cuoi_khoa/html/index.html
+++ b/bai_cuoi_khoa/html/index.html
@@ -10,39 +10,58 @@
   <!-- <script src="index.js"></script> -->
 </head>
 <body>
-  <!-- Heading -->
-  <div class="header">
-    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
-    <div class="first-header">
-      <div class="social-icons">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-solid fa-cart-plus"></i>
-      </div>
+<!-- Heading -->
+<div class="header">
+  <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
+  <div class="first-header">
+    <div class="social-icons">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-solid fa-cart-plus"></i>
     </div>
-    <div class="container">
-      <div class="nav">
+    <div class="left-icons">
+      <i class="fa-solid fa-globe"></i>
+      <span class="language">EN</span>
+      <i class="fa-solid fa-chevron-down"></i>
+      <ul class="subnav">
         <li>
-          <a href="/bai_cuoi_khoa/html/index.html">Home</a>
+          <a href="">
+            中文
+          </a>
         </li>
-        <li>
-          <a href="/bai_cuoi_khoa/html/test.html">About</a>
-        </li>
-        <li>
-          <a href="">dsa</a>
-        </li>
-        <li>
-          <a href="">Schedule</a>
-        </li>
-      </div>
+        <li><a href="">日本語</a></li>
+        <li><a href="">한국어</a></li>
+        <li><a href="">العربية</a></li>
+        <li><a href="">Español</a></li>
+        <li><a href="">Français</a></li>
+      </ul>
     </div>
   </div>
+  <div class="container">
+    <div class="nav">
+      <li>
+        <a href="/bai_cuoi_khoa/html/index.html">Home</a>
+      </li>
+      <li>
+        <a href="/bai_cuoi_khoa/html/test.html">About</a>
+      </li>
+      <li>
+        <a href="/bai_cuoi_khoa/html/team.html">Myclub</a>
+      </li>
+      <li>
+        <a href="/bai_cuoi_khoa/html/table.html">Schedule</a>
+      </li>
+    </div>
+  </div>
+</div>
   <!-- End -->
 
   <!-- Noi dung -->
   <div class="content">
-    <div class="img-content"></div>
+    <div class="img-content">
+    </div>
+    
     <div class="big-match">
       <div class="home-person">
         <img src="/bai_cuoi_khoa/img/nedved.png" alt="">
