--- a/bai_cuoi_khoa/html/test.html
+++ b/bai_cuoi_khoa/html/test.html
@@ -11,14 +11,32 @@
 </head>
 <body>
   <!-- Heading -->
+<!-- Heading -->
   <div class="header">
-    <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
+    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-solid fa-cart-plus"></i>
+      </div>
+      <div class="left-icons">
+        <i class="fa-solid fa-globe"></i>
+        <span class="language">EN</span>
+        <i class="fa-solid fa-chevron-down"></i>
+        <ul class="subnav">
+          <li>
+            <a href="">
+              中文
+            </a>
+          </li>
+          <li><a href="">日本語</a></li>
+          <li><a href="">한국어</a></li>
+          <li><a href="">العربية</a></li>
+          <li><a href="">Español</a></li>
+          <li><a href="">Français</a></li>
+        </ul>
       </div>
     </div>
     <div class="container">
@@ -33,7 +51,8 @@
           <a href="/bai_cuoi_khoa/html/team.html">dsa</a>
         </li>
         <li>
-          <a href="">Schedule</a>
+          <a href="/bai_cuoi_khoa/html/table.html">Schedule</a>
+
         </li>
       </div>
     </div>
