--- a/bai_cuoi_khoa/html/team.html
+++ b/bai_cuoi_khoa/html/team.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Heading -->
   <div class="header">
-    <!-- <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt=""> -->
+    <img src="/bai_cuoi_khoa/img/logo_myclub.png" alt="">
     <div class="first-header">
       <div class="social-icons">
         <i class="fa-brands fa-facebook-f"></i>
@@ -47,17 +47,20 @@
           <a href="/bai_cuoi_khoa/html/test.html">About</a>
         </li>
         <li>
-          <a href="/bai_cuoi_khoa/html/team.html">dsa</a>
+          <a href="/bai_cuoi_khoa/html/team.html">Myclub</a>
         </li>
         <li>
-          <a href="">Schedule</a>
+          <a href="/bai_cuoi_khoa/html/table.html">Schedule</a>
+
         </li>
       </div>
     </div>
   </div>
+  <br style="clear:both"> 
+
   <div class="player">
     <!-- GOALKEEPERS ******************************** -->
-    <div class="player-box">
+    <div class="player-box first">
       <h2 class="name-box">
         GOALKEEPERS
       </h2>
@@ -71,11 +74,14 @@
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/sar.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
-            <span class="first-name-player">David</span>
-            <span class="last-name-player">De gea</span>
+            <span class="first-name-player">Edwin</span>
+            <span class="last-name-player">van der sar</span>
           </div>
         </div>
         <div class="show-player">
@@ -96,6 +102,8 @@
         </div>
       </div>  
     </div>
+    <br style="clear:both"> 
+
     <!-- GOALKEEPER END ******************** -->
 
     <!-- DEFENDERS ********* -->
@@ -105,39 +113,63 @@
       </h2>
       <div class="player-card">
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/nesta.jfif" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
-            <span class="first-name-player">David</span>
-            <span class="last-name-player">De gea</span>
+            <span class="first-name-player">Alessandro</span>
+            <span class="last-name-player">Nesta</span>
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/varane.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
-            <span class="first-name-player">David</span>
-            <span class="last-name-player">De gea</span>
+            <span class="first-name-player">RApheal</span>
+            <span class="last-name-player">varane</span>
           </div>
         </div>
         <div class="show-player">
+          <div class="img-player special">
+          <img src="../img/brandon.jpg" alt="">
           <div class="color-slider"></div>
+          </div>
           <div class="info-player">
             <p class="number-player">1</p>
-            <span class="first-name-player">David</span>
-            <span class="last-name-player">De gea</span>
+            <span class="first-name-player">Brandon</span>
+            <span class="last-name-player">Williams</span>
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/timber.webp" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
-            <span class="first-name-player">David</span>
-            <span class="last-name-player">De gea</span>
+            <span class="first-name-player">Jurien</span>
+            <span class="last-name-player">Timber</span>
+          </div>
+        </div>
+        <div class="show-player">
+          <div class="img-player special">
+          <img src="../img/dalot.jpg" alt="">
+          <div class="color-slider"></div>
+          </div>
+          <div class="info-player">
+            <p class="number-player">1</p>
+            <span class="first-name-player">Diogo</span>
+            <span class="last-name-player">dalot</span>
           </div>
         </div>
       </div>  
     </div>
+    <br style="clear:both"> 
     <!-- DEFENDERS END ********************** -->
 
     <!-- MIDFIELDERS ****************** -->
@@ -147,7 +179,32 @@
       </h2>
       <div class="player-card">
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/frenkie.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
+          <div class="info-player">
+            <p class="number-player">1</p>
+            <span class="first-name-player">Frenkie</span>
+            <span class="last-name-player">De jong</span>
+          </div>
+        </div>
+        <div class="show-player">
+          <div class="img-player">
+            <img src="../img/schole.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
+          <div class="info-player">
+            <p class="number-player">1</p>
+            <span class="first-name-player">Paul</span>
+            <span class="last-name-player">Scholes</span>
+          </div>
+        </div>
+        <div class="show-player">
+          <div class="img-player">
+            <img src="../img/beckham.webp" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
             <span class="first-name-player">David</span>
@@ -155,7 +212,10 @@
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/vieira.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
             <span class="first-name-player">David</span>
@@ -163,7 +223,10 @@
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/mid.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
             <span class="first-name-player">David</span>
@@ -171,7 +234,10 @@
           </div>
         </div>
         <div class="show-player">
-          <div class="color-slider"></div>
+          <div class="img-player">
+            <img src="../img/beckham.webp" alt="">
+            <div class="color-slider"></div>
+            </div>
           <div class="info-player">
             <p class="number-player">1</p>
             <span class="first-name-player">David</span>
@@ -180,6 +246,8 @@
         </div>
       </div>  
     </div>
+    <br style="clear:both"> 
+
     <!-- MIDFIELDERS END ************** -->
 
         <!-- FORWARDS ****************** -->
@@ -189,7 +257,10 @@
           </h2>
           <div class="player-card">
             <div class="show-player">
-              <div class="color-slider"></div>
+              <div class="img-player">
+            <img src="../img/persie.webp" alt="">
+            <div class="color-slider"></div>
+            </div>
               <div class="info-player">
                 <p class="number-player">1</p>
                 <span class="first-name-player">David</span>
@@ -197,7 +268,10 @@
               </div>
             </div>
             <div class="show-player">
-              <div class="color-slider"></div>
+              <div class="img-player">
+            <img src="../img/greenwood.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
               <div class="info-player">
                 <p class="number-player">1</p>
                 <span class="first-name-player">David</span>
@@ -205,7 +279,10 @@
               </div>
             </div>
             <div class="show-player">
-              <div class="color-slider"></div>
+              <div class="img-player">
+            <img src="../img/ronaldo-player.jpg" alt="">
+            <div class="color-slider"></div>
+            </div>
               <div class="info-player">
                 <p class="number-player">1</p>
                 <span class="first-name-player">David</span>
@@ -213,7 +290,10 @@
               </div>
             </div>
             <div class="show-player">
-              <div class="color-slider"></div>
+              <div class="img-player">
+            <img src="../img/Antony.jpeg" alt="">
+            <div class="color-slider"></div>
+            </div>
               <div class="info-player">
                 <p class="number-player">1</p>
                 <span class="first-name-player">David</span>
@@ -222,6 +302,8 @@
             </div>
           </div>  
         </div>
+    <br style="clear:both"> 
+
         <!-- FORWARDS END ************** -->
   </div>
   <!-- End -->
